examples/issues/issue_1685/expected/networking.k8s.io_v1beta1_ingress_staging-wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: staging-letsencrypt-staging
    kubernetes.io/ingress.class: nginx
  name: staging-wordpress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
        path: /
  tls:
  - hosts:
    - example.com
    secretName: wordpress-cert
